# qanoon-ai

./: .gitignore  README.md  cicd.yml  deploy.md  deployment.md  langgraph.json  log.md  package.json  project_notes.txt  pyproject.toml  requirements.txt
.github/workflows/: deploy.yml
backend/: Dockerfile.fastapi  app.py  temp.py
backend/routes/: audio.py  auth.py  chat.py  threads.py
backend/services/: initial_state.py  streaming.py  token_limit.py
docs/: TenantIsolation.md  audioWaveform.md  authentication.md  logout.md
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.jsx  api.js  index.css
frontend/src/components/: ChatWindow.css  ChatWindow.jsx  Login.css  Login.jsx  Sidebar.css  Sidebar.jsx
notebook/: final_version_imporved(stm).ipynb  main.ipynb  production_grader.ipynb  test.py
notebook/RAF using Langchain SupBase/: RAG_using_postgres_autmatically_handle_sql.ipynb  database
notebook/RAG Using Manula SQL handling on SupBase/: RAG_using_manull_sql_hanlding.ipynb  database
notebook/discarded/: database  qanoon_local_postgre_docker.ipynb  qanoon_superbase(SIMPLE).ipynb  qanoon_superbase_postgre_Production.ipynb
src/agent/: model_loader.py
src/db_connection/: connection.py
src/graph/: builder.py  nodes.py  state.py
src/prompts/: rag_prompt.py
src/testing_locally/: chat_services.py
src/utils/: file_hash.py
