[project]
name = "legal-chatbot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiofiles>=25.1.0",
    "cryptography>=46.0.3",
    "dotenv>=0.9.9",
    "fastapi>=0.128.0",
    "gtts>=2.5.4",
    "ipykernel>=7.1.0",
    "langchain>=1.2.6",
    "langchain-cohere>=0.5.0",
    "langchain-community>=0.4.1",
    "langchain-google-genai>=4.2.0",
    "langchain-groq>=1.1.1",
    "langchain-openai>=1.1.7",
    "langchain-postgres>=0.0.16",
    "langgraph>=1.0.6",
    "langgraph-checkpoint-postgres>=3.0.3",
    "pgvector<0.4",
    "psycopg2>=2.9.11",
    "psycopg2-binary>=2.9.11",
    "psycopg[binary,pool]>=3.3.2",
    "pydantic>=2.12.5",
    "pydub>=0.25.1",
    "pypdf>=6.6.0",
    "python-jose>=3.5.0",
    "python-multipart>=0.0.21",
    "rank-bm25>=0.2.2",
    "sqlalchemy>=2.0.46",
    "supabase>=2.27.2",
    "uvicorn[standard]>=0.40.0",
]
